<resources>
    <string name="app_name">Dlc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="app_decription">Your awesome app</string>
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>

    <string name="mod_info">Modifier vos informations</string>
    <string name="home_insc">INSCRIPTION</string>
    <string name="home_txt">Creer un compte en tant que: </string>
    <string name="home_btn_1">Consommateur</string>
    <string name="home_btn_2">Distributeur</string>
    <string name="name_edit_info">Nom de votre surface</string>
    <string name="openinig_hour_edit_info">Horaire d\'ouverture</string>
    <string name="closing_hour_edit_info">Horaire de fermeture</string>
    <string name="address_edit_info">Adresse</string>
    <string name="city_edit_info">Ville</string>
    <string name="postal_code_edit_info">Code postal</string>
    <string name="btn_submit_edit_info">Modifier</string>
    <string name="title_activity_create_account">create_account</string>


    <!--<string name="app_name">Material Design</string>
    <string name="action_settings">Settings</string>-->
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_produits">Produits</string>
    <string name="nav_item_distributeurs">Distributeurs</string>
    <string name="nav_item_preferences">Preferences</string>

    <!-- navigation drawer pour les utilisateurs  -->
    <string-array name="nav_drawer_utlisateur">
        <item>@string/nav_item_produits</item>
        <item>@string/nav_item_distributeurs</item>
        <item>@string/nav_item_preferences</item>
    </string-array>


    <string name="nav_item_ajouter">Ajouter un produit</string>
    <string name="nav_item_modifer">Mes produits</string>
    <string name="nav_item_infos">Modifier mes informations</string>

    <!-- navigation drawer pour les distributeurs  -->
    <string-array name="nav_drawer_distributeur">
        <item>@string/nav_item_ajouter</item>
        <item>@string/nav_item_modifer</item>
        <item>@string/nav_item_infos</item>
    </string-array>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_activity_signup">signup</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="btn_sign_up">Creer un compte</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_voie">Nom et/ou numéro de voie</string>
    <string name="hint_ville">Ville</string>
    <string name="hint_zip">Code postal</string>
    <string name="horaireOuverture">Horaire d\'ouverture</string>
    <string name="horaireFermerrture">Horaire de fermerture</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
