<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/name_edit_info"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/opening_hour"
        android:layout_gravity="center_horizontal"
        android:hint="@string/openinig_hour_edit_info"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/closing_hour"
        android:layout_gravity="center_horizontal"
        android:hint="@string/closing_hour_edit_info"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/address_edit_info"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/city_edit_info"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/postal_code"
        android:layout_gravity="center_horizontal"
        android:hint="@string/postal_code_edit_info"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_edit_info"
        android:id="@+id/submit"
        android:layout_gravity="center_horizontal" />

</LinearLayout>