<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.dlc.dlc.MainActivity"
    android:background="@drawable/fruitsoulegumes"
    android:scaleType = "centerCrop">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/layout_home_bg"
        android:clickable="false"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_insc"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:textStyle="bold" />

        <TextView
            android:layout_width="236dp"
            android:layout_height="81dp"
            android:text="@string/home_txt"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_btn_2"
            android:id="@+id/button2"
            android:layout_gravity="left|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_btn_1"
            android:id="@+id/button"
            android:layout_gravity="right|bottom"/>
    </FrameLayout>
</RelativeLayout>